--- a/package.json
+++ b/package.json
@@ -3,12 +3,22 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^4.12.4",
+    "@material-ui/icons": "^4.11.3",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.1.1",
     "@testing-library/user-event": "^13.5.0",
+    "grapesjs": "^0.18.4",
+    "intro.js": "^5.1.0",
+    "intro.js-react": "^0.6.0",
+    "introjs": "^0.2.2",
+    "jquery": "^3.6.0",
+    "localbase": "^0.7.5",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
+    "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "react-window": "^1.8.6",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
